--- a/wwwroot/css/stylesheet.css
+++ b/wwwroot/css/stylesheet.css
@@ -568,8 +568,8 @@ a:focus {
   cursor: pointer;
 }
 
-.header__button:hover::before,
-.header__button:focus::before {
+.header__button:hover .header__scroll-btn,
+.header__button:focus .header__scroll-btn {
   background-color: #d7a000;
 }
 
@@ -587,8 +587,14 @@ a:focus {
   transition: border-color .3s;
 }
 
-.header__scroll::before {
-  content: '';
+.header__scroll .header__scroll-btn {
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-timing-function: linear;
@@ -607,12 +613,6 @@ a:focus {
   animation-name: scroll;
   background-color: #fff;
   border-radius: 50%;
-  position: absolute;
-  width: 7px;
-  height: 7px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
   -webkit-box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.5);
   box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.5);
   -webkit-transition: background-color .3s;
